# cuKING

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  batch_job.json  cloud_batch_submit.py  cloudbuild.yaml  cuKING.cu  cuking.cu  cuking.h  cuking_outputs_to_ht.py  dense_mt_to_parquet.py  gcs_client.cc  gcs_client.h  gvcf2cuking.cc  gvcf2rareshare.cc  instance_startup_script.sh  main.cu  mt_to_cuking_inputs.py  packed_parquet_to_bitset.cc  pipeline.yaml  rareshare.cu  run_cuking.sh  status_macros.h  url_reader.cc  url_reader.h  utils.h  vds_to_packed_parquet.py  vds_to_packed_parquet_autoscaling_policy.yaml
.github/workflows/: docker_image.yaml
scripts/: af_filter_loci.py  compare_ped.py  convert_sites_table.py  gvcf2cuking_1kg.py  gvcf2rareshare_1kg.py  hail_king_1kg.py  plot_phi_hist.py  print_google_service_account_access_token.py  relatedness_comparison.py  vds_to_packed_parquet.py
workflows/: 1kg_gvcfs.txt  af_filter_loci.py  gvcf2cuking_1kg.py
